# printers-js

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  Taskfile.yml  build.rs  bun.ts  bunfig.toml  deno.json  deno.ts  eslint.config.js  index.ts  jest.config.js  jsr.json  mod.test.ts  mod.ts  node.js  node.ts  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  test-async.ts  test-print.ts  tsconfig.build.json  tsconfig.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: ci-report.yml  ci.yml  claude-code-review.yml  claude.yml  formatting.yml  linting.yml  release.yml
.helix/: languages.toml
.zed/: debug.json  settings.json  tasks.json
docs/: CrossRuntimeSupport.md  JobTracking.md  PrinterStateMonitoring.md  PrintingOptions.md  README.md
examples/: README.md
examples/bun/: bunfig.toml  main.ts  package.json
examples/bun/jsr-import/: bunfig.toml  main.ts  package.json
examples/bun/npm-import/: bunfig.toml  (+2 more)
examples/deno/: deno.json  main.ts
examples/node/: main.js  package.json
lib/: core.rs  lib.rs  napi.rs
media/: sample-document.docx  sample-text.txt  sample.docx  sample.txt
scripts/: build-all.js  build-all.sh  build-all.ts  build-napi.js  build-napi.ts  bump-version.js  bump-version.ts  compile.js  fix-platform-packages.js  fix-prepublish.js  move-napi-artifacts.ts  publish-platform-packages.js  remove-env-check.js  remove-env-check.ts  run-ci-local.js  run-ci-local.sh  run-ci-local.ts  test-all.js  test-all.sh  test-all.ts  test-package-linking.js  test-runtimes.js  utils.js
src/: bun.ts  core.rs  deno.ts  ffi-loader.ts  ffi.rs  index.ts  lib.rs  napi.rs  node.rs  node.ts
src/tests/: node-test-runner.ts  shared.test.ts
tests/: bun.test.ts  jest.setup.js  node-test-runner.ts  node.compatibility.jest.js  node.napi.jest.js  shared.test.ts  universal.test.ts
(+8 files in other folders)
