[package]
name = "printers-js"
authors = ["Evan Simkowitz <esimkowitz@users.noreply.github.com>"]
version = "0.3.10"
edition = "2021"
publish = false

[dependencies]
lazy_static = "1.5.0"
printers = "2.2.0"
serde_json = "1.0.143"

# N-API dependencies (optional)
napi = { version = "3", optional = true }
napi-derive = { version = "3", optional = true }

[dev-dependencies]
serial_test = "3.1"

[build-dependencies]
napi-build = { version = "2", optional = true }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[lib]
crate-type = ["cdylib"]

[package.metadata.napi]
package-name = "@printers/printers"
