[package]
name = "printers-js"
authors = ["Evan Simkowitz <esimkowitz@users.noreply.github.com>"]
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
lazy_static = "1.5.0"
printers = "2.2.1"
serde_json = "1.0.149"
uuid = { version = "1.19", features = ["v4"] }
tempfile = "3.24.0"

# N-API dependencies (optional)
napi = { version = "3", optional = true }
napi-derive = { version = "3", optional = true }

[dev-dependencies]
serial_test = "3.3"

[build-dependencies]
napi-build = { version = "2", optional = true }

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[lib]
path = "lib/lib.rs"
crate-type = ["cdylib"]

[package.metadata.napi]
package-name = "@printers/printers"
